my first commit

--- a/task 2/BMI _Calculater/index.html
+++ b/task 2/BMI _Calculater/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAVA_SCRIPT</title>
+    <title>BMI_CALCULATER</title>
 </head>
 <body>
-    <h1>JAVA_SCRIPT practice</h1>
+    <h1>BMI_CALCULATER</h1>
+    <script src="assets/script.js"></script>
 </body>
-<script src="./assets/script.js"></script>
 </html>
