Reduce & Crud Method

--- a/task8/index.html
+++ b/task8/index.html
@@ -28,7 +28,7 @@
 
         </tbody>
     </table>
-    <!-- <script src="./assets/script.js"></script> -->
+    <script src="./assets/script.js"></script>
     <script src="./assets/scriptcrud.js"></script>
 </body>
 </html>
