--- a/task8/index.html
+++ b/task8/index.html
@@ -12,7 +12,7 @@
     <!------------------------------------------------------------------------------------------------>
     <h1>CRUD OPERATIN</h1>
     <input type="text" id="name">
-        <input type="button" value="submit" onclick="manageData()">
+        <input type="button" value="Submit" onclick="manageData()">
     </form>
     <div id="msg"></div>
     <h2>List</h2>
