--- a/task1/index.html
+++ b/task1/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>JAVA_SCRIPT practice</h1>
+    <h1>hello</h1>
 </body>
 <script src="./assets/script.js"></script>
 </html>
